force-app/main/default/objects/Opportunity/fields/Acres__c.field-meta.xml
<CustomField>
    <fullName>Acres__c</fullName>
    <description>Total acreage of the land parcel. Relevant for the Land record type.</description>
    <label>Acres</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>