force-app/main/default/objects/Opportunity/fields/Broker_First_Seen__c.field-meta.xml
<CustomField>
    <fullName>Broker_First_Seen__c</fullName>
    <description>Copied from Lead at Conversion 1 - drives 90-day protection</description>
    <label>Broker First Seen</label>
    <type>Date</type>
</CustomField>