force-app/main/default/objects/Opportunity/fields/Bundle_LOI__c.field-meta.xml
<CustomField>
    <fullName>Bundle_LOI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle LOI</label>
    <type>Checkbox</type>
</CustomField>