force-app/main/default/objects/Opportunity/fields/Cash_on_Cash_Return__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_Cash_Return__c</fullName>
    <description>Year 1 levered cash yield on equity invested.</description>
    <label>Cash on Cash Return</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>