force-app/main/default/objects/Opportunity/fields/Construction_Input_Needed__c.field-meta.xml
<CustomField>
    <fullName>Construction_Input_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when the construction lead&apos;s input is needed on this (retail) deal. Opens a Construction Condition Assessment at ANY stage - including before underwriting.</description>
    <label>Construction Input Needed</label>
    <type>Checkbox</type>
</CustomField>