force-app/main/default/objects/Opportunity/fields/Contract_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Executed_Date__c</fullName>
    <description>Day 0 trigger field</description>
    <label>Contract Executed Date</label>
    <type>DateTime</type>
</CustomField>