force-app/main/default/objects/Opportunity/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the LOI is fully executed by all parties. The milestone intended to trigger Transaction and IR Offering creation (that automation is built separately).</description>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>