force-app/main/default/objects/Opportunity/fields/CoStar_Last_Synced_DateTime__c.field-meta.xml
<CustomField>
    <fullName>CoStar_Last_Synced_DateTime__c</fullName>
    <description>Stamped by the Sync button on the CoStar card. STUB: no external system is contacted, so this records when a user pressed the button, not when data was refreshed.</description>
    <label>CoStar Last Synced</label>
    <type>DateTime</type>
</CustomField>