force-app/main/default/objects/Opportunity/fields/CoStar_URL__c.field-meta.xml
<CustomField>
    <fullName>CoStar_URL__c</fullName>
    <label>CoStar URL</label>
    <type>Url</type>
</CustomField>