force-app/main/default/objects/Opportunity/fields/Days_in_System__c.field-meta.xml
<CustomField>
    <fullName>Days_in_System__c</fullName>
    <description>Age in days since Broker First Seen (fallback CreatedDate), formatted &quot;Nd&quot;. Mirrors Lead.Days_in_System__c exactly, including its shape as Text rather than Number - so this field sorts lexicographically ("10d" &lt; "9d"), same as the Lead field. That is a known, accepted mirroring consequence, not a defect. ⚠ TIMEZONE NOTE: DATEVALUE() on the underlying DateTime field resolves in GMT, so a Broker_First_Seen__c instant after ~18:00 US Central can read one day older here than local wall-clock expectation. Same known, accepted quirk as the Lead field - not fixed here to avoid diverging from established Lead behavior.</description>
    <formula>TEXT(TODAY() - DATEVALUE(IF(ISBLANK(Broker_First_Seen__c), CreatedDate, Broker_First_Seen__c))) &amp; &quot;d&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in System</label>
    <type>Text</type>
</CustomField>