force-app/main/default/objects/Opportunity/fields/Deal_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Deal_Bucket__c</fullName>
    <description>Junior's 8 deal-tracker buckets, derived from stage + deal category. Reporting-only projection - automation must branch on StageName/Deal_Category__c, never on this formula (before-save flows cannot read formula fields).</description>
    <formula>IF(OR(ISPICKVAL(Deal_Category__c,'Dead'), ISPICKVAL(StageName,'Dead/Pass')), 'Dead',
IF(ISPICKVAL(StageName,'Closed Won'), 'Bought/Closed',
IF(OR(ISPICKVAL(StageName,'PSA Executed'), AND(ISPICKVAL(StageName,'Under Contract'), Contract_Signed__c)), 'PSA Executed/About to Close',
IF(OR(ISPICKVAL(StageName,'PSA Negotiation'), ISPICKVAL(StageName,'Under Contract')), 'PSA Negotiation',
IF(ISPICKVAL(StageName,'LOI Signed'), 'LOI Accepted',
IF(ISPICKVAL(StageName,'LOI Submitted'), 'LOI Submitted',
IF(OR(ISPICKVAL(StageName,'Initiate LOI'), ISPICKVAL(StageName,'LOI Under Approval')), 'LOI Pending',
'Interested Deals')))))))</formula>
    <label>Deal Tracker Bucket</label>
    <type>Text</type>
</CustomField>