force-app/main/default/objects/Opportunity/fields/Deal_Category__c.field-meta.xml
<CustomField>
    <fullName>Deal_Category__c</fullName>
    <label>Deal Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
                <default>true</default>
                <label>Live</label>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>