force-app/main/default/objects/Opportunity/fields/Deal_Room_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Room_Link__c</fullName>
    <description>Link to the deal room / offering materials, carried from Lead.Deal_Room_Link__c at conversion. Distinct from OneDrive_Folder_URL__c, DPEG's own document folder — this is the broker's data room.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when not stated in the email.</inlineHelpText>
    <label>Deal Room Link</label>
    <type>Url</type>
</CustomField>