force-app/main/default/objects/Opportunity/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <label>Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluating</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Countered</fullName>
            </value>
            <value>
                <fullName>Killed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>LOI Signed</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Asset Under Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>