force-app/main/default/objects/Opportunity/fields/Development_Input_Needed__c.field-meta.xml
<CustomField>
    <fullName>Development_Input_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when the development team&apos;s input is needed on this (land) deal. Opens a Development Feasibility Review at ANY stage - including before underwriting.</description>
    <label>Development Input Needed</label>
    <type>Checkbox</type>
</CustomField>