force-app/main/default/objects/Opportunity/fields/DPEG_First__c.field-meta.xml
<CustomField>
    <fullName>DPEG_First__c</fullName>
    <description>Copied from Lead.DPEG_First__c at Conversion 1 by LeadConvertService.applyDealFields. Mirrors Lead.DPEG_First__c, which the Lead_Intake_Stamp flow's Assign_DPEG_First element populates from OwnerId. The first DPEG user to be assigned this deal, preserved across conversion.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPEG First</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>DPEG First Opportunities</relationshipLabel>
    <relationshipName>DPEG_First_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>