force-app/main/default/objects/Opportunity/fields/Equity_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Equity_Multiple__c</fullName>
    <description>Total cash returned to investors divided by total equity invested over the hold period.</description>
    <label>Equity Multiple</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>