force-app/main/default/objects/Opportunity/fields/Equity_Required__c.field-meta.xml
<CustomField>
    <fullName>Equity_Required__c</fullName>
    <description>Total equity capital DPEG needs to invest (My Price minus Projected Loan).</description>
    <label>Equity Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>