force-app/main/default/objects/Opportunity/fields/GRM__c.field-meta.xml
<CustomField>
    <fullName>GRM__c</fullName>
    <description>Gross Rent Multiplier. Editable underwriting figure on the Opportunity.</description>
    <label>GRM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>