force-app/main/default/objects/Opportunity/fields/Guidance_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Cap_Rate__c</fullName>
    <description>Seller&apos;s stated asking cap rate, carried from the Lead for reference throughout the deal. (Guidance Price is held in Asking_Price__c.)</description>
    <label>Guidance Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>