force-app/main/default/objects/Opportunity/fields/Guidance_Price_High__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Price_High__c</fullName>
    <description>High end of a guidance price range, carried from Lead.Guidance_Price_High__c at conversion. Currency(18,2), matching the Lead source exactly.</description>
    <inlineHelpText>Carried from the Lead at conversion; null when the broker email did not state a price range.</inlineHelpText>
    <label>Guidance Price High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>